add encryption back to lumberjack... doesn't work without

--- a/resources/files/logstash_forwarder/lumberjack.conf
+++ b/resources/files/logstash_forwarder/lumberjack.conf
@@ -1,26 +1,29 @@
 {
-  "files": [
-    {
-      "fields": {
-        "type": "syslog"
-      },
-      "paths": [
-        "\/var\/log\/syslog",
-        "\/var\/log\/messages"
-      ]
-    },
-    {
-      "fields": {
-        "type": "apache"
-      },
-      "paths": [
-        "\/var\/log\/apache2\/access.log"
-      ]
-    }
-  ],
   "network": {
+    "ssl ca": "/etc/pki/tls/certs/logstash-forwarder.crt",
+    "ssl key": "/etc/pki/tls/private/logstash-forwarder.key",
+    "ssl certificate": "/etc/pki/tls/certs/logstash-forwarder.crt",
     "servers": [
       "localhost:5043"
     ]
-  }
+  },
+  "files": [
+    {
+      "paths": [
+        "/var/log/syslog",
+        "/var/log/messages"
+      ],
+      "fields": {
+        "type": "syslog"
+      }
+    },
+    {
+      "paths": [
+        "/var/log/apache2/access.log"
+      ],
+      "fields": {
+        "type": "apache"
+      }
+    }
+  ]
 }
