mlockall elasticsearch and remove memlock ulimit in upstart

--- a/resources/files/elasticsearch/elasticsearch.conf
+++ b/resources/files/elasticsearch/elasticsearch.conf
@@ -16,6 +16,7 @@ respawn limit 10 30
 # /etc/security/limits.conf, so the open-file limits
 # settings need to be applied here.
 limit nofile 64000 64000
+limit memlock unlimited unlimited
 
 setuid elasticsearch
 setgid elasticsearch
