--- a/resources/files/marathon/marathon.conf
+++ b/resources/files/marathon/marathon.conf
@@ -6,11 +6,15 @@ stop on runlevel [!2345]
 respawn
 respawn limit 10 5
 
+# task_launch_timeout must be >= mesos slave timeout
+exec /usr/local/bin/marathon --task_launch_timeout 300000
+
 # Custom local
 # Command line options: https://github.com/mesosphere/marathon#command-line-options
-script
-  exec /opt/marathon/bin/start \
-    --master `cat /etc/mesos/zk` \
-    --zk `cat /etc/mesos/zk | sed s/mesos$/marathon/` \
-   >> /var/log/marathon.log 2>&1
-end script
+# script
+#   exec /opt/marathon/bin/start \
+#     --master `cat /etc/mesos/zk` \
+#     --zk `cat /etc/mesos/zk | sed s/mesos$/marathon/` \
+#     --task_launch_timeout 300000 \
+#    >> /var/log/marathon.log 2>&1
+# end script
