marathon's binary location has changed

--- a/resources/files/marathon/marathon.conf
+++ b/resources/files/marathon/marathon.conf
@@ -7,7 +7,7 @@ respawn
 respawn limit 10 5
 
 # task_launch_timeout must be >= mesos slave timeout
-exec /usr/local/bin/marathon --task_launch_timeout 300000
+exec /usr/bin/marathon --task_launch_timeout 300000
 
 # Custom local
 # Command line options: https://github.com/mesosphere/marathon#command-line-options
